@@ -20,6 +20,7 @@ longer available.
 The following bugs have been fixed in the 1.5.6 release.
 
 K  8398	MailSessionDefinition should use the Repeatable annotation for Java EE 8
+K  8399	IdleManager fails on Android
 
 
 		  CHANGES IN THE 1.5.6 RELEASE
